--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,15 +6,15 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
-    - name: Build Rust project
+    - name: Check toolchain
       uses: actions-rs/toolchain@v1
       with:
         toolchain: stable
         profile: default
-    - name: Run tests
-      run: cargo test
+    - name: Build
+      run: cargo build --bin clip-as-service-server --release
     - name: Upload artifact
       uses: actions/upload-artifact@v2
       with:
-        name: my-artifact
+        name: clip-as-service-server
         path: target/release/clip-as-service-server
