--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,6 +11,8 @@ jobs:
       with:
         toolchain: stable
         profile: default
+    - name: Install requirement
+      run: apt update && apt-get install protobuf-compiler
     - name: Build
       run: cargo build --bin clip-as-service-server --release
     - name: Upload artifact
