--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,7 +1,8 @@
 name: Rust Build
 on: [push, pull_request]
 env:
-  ORT_STRATEGY: download
+  ORT_STRATEGY: system
+  ORT_LIB_LOCATION: ./onnxruntime-linux-x64-1.14.1/lib/
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -14,6 +15,8 @@ jobs:
         profile: default
     - name: Install requirement
       run: sudo apt-get update && sudo apt-get install -y protobuf-compiler
+    - name: Download Onnx runtime
+      run: wget https://github.com/microsoft/onnxruntime/releases/download/v1.14.1/onnxruntime-linux-x64-1.14.1.tgz && tar -xzvf onnxruntime-linux-x64-1.14.1.tgz
     - name: Build
       run: cargo build --bin clip-as-service-server --release
     - name: Upload artifact
