--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,13 +10,14 @@ license = "MIT"
 ndarray = "0.15.0"
 itertools = "0.10.5"
 num_cpus = "1.15.0"
-ort = { git = "https://github.com/pykeio/ort.git", default-features = false }
+ort = { git = "https://github.com/pykeio/ort.git", features = ["cuda"] }
 prost = "0.11.8"
 tokenizers = "0.13.2"
 tokio = { version = "1.26.0", features = ["macros", "rt-multi-thread"] }
 tonic = "0.8.3"
 image = "0.24.6"
 clap = { version = "4.2.4", features = ["derive"] }
+tracing-subscriber = { version = "0.3", features = [ "env-filter", "fmt" ] }
 
 [build-dependencies]
 tonic-build = "0.8.4"
@@ -31,3 +32,9 @@ rustflags = ["-C", "linker-flavor=ld.lld"]
 
 [target.x86_64-pc-windows-msvc]
 rustflags = ["-C", "target-feature=+crt-static"]
+
+[profile.dev]
+rpath = true
+
+[profile.release]
+rpath = true
